HT-74: Add endpoint to remove account and all user info
